# onemorebeer-ui

./: .gitignore  Cargo.toml  Justfile  config.example.json
.github/workflows/: release.yml
debian/: onemorebeer-ui.service
src/: cache.rs  config.rs  local_cache_middleware.rs  main.rs  mode.rs  sync.rs  templates.rs  web.rs
src/beer/: beer.rs  database.rs  mod.rs  one.rs  packed_as.rs  scores.rs
src/onemorebeer/: category.rs  client.rs  mod.rs  repository.rs
src/ratebeer/: client.rs  query.gql  repository.rs
src/untappd/: client.rs  mod.rs  repository.rs
templates/: root.html
