[package]
name = "onemorebeer-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
regex = "1"
once_cell = "1"
axum = "0.8"
askama = "0.12"
lexopt = "0.3"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.deb]
assets = [
    [
        "target/release/onemorebeer-ui",
        "usr/bin/onemorebeer-ui",
        "755",
    ],
    [
        "debian/onemorebeer-ui.service",
        "lib/systemd/system/onemorebeer-ui.service",
        "644",
    ],
]
copyright = "2023, Ilya Bylich."
depends = "$auto, systemd"
extended-description = "A simple frontend for a beer shop."
maintainer = "onemorebeer-ui developer <ibylich@gmail.com>"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"
