[package]
name = "onemorebeer-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
regex = "1"
once_cell = "1"
axum = "0.8"
askama = "0.15"
log = "0.4"
env_logger = "0.11"
reqwest-middleware = { version = "0.5.0", features = ["json", "rustls-tls"] }
async-trait = "0.1"
http = "1.3"

[profile.release]
opt-level = "z"
lto = true
